tests/negative/pattern/mut_underscore.orng
// mut_underscore.orng:2:14: error: discarded symbol marked as `mut`
//     let mut _ : Int = 4
//             ^
// 
fn main() -> Int {
    let mut _ : Int = 4
    4
}